[project]
name = ""
version = ""
description = ""
authors = [
    {name = "axect", email = "axect@outlook.kr"},
]
dependencies = [
    "pyro-ppl>=1.8.6",
    "notebook>=7.0.2",
    "numpy>=1.25.2",
    "scipy>=1.9.3",
    "matplotlib>=3.7.2",
    "pandas>=2.0.3",
    "setuptools>=68.0.0",
    "torch>=2.0.1",
    "graphviz>=0.20.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

